--- a/package.json
+++ b/package.json
@@ -2,13 +2,14 @@
   "name": "tv",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "app.js",
   "dependencies": {
     "vizio-smart-cast": "^1.1.6",
     "wol": "^1.0.3"
   },
   "devDependencies": {},
   "scripts": {
+    "start": "node app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
